--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.15.0",
     "isomorphic-unfetch": "3.1.0",
     "next": "^10.2.0",
+    "next-plausible": "3.1.4",
     "next-sanity": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
